# osh-dir-std-rs

./: .gitignore  .gitmodules  Cargo.lock.license  Cargo.toml  README.md  build.rs
.github/: requirements-ci.txt
.github/workflows/: build.yml  release.yml
lib/: Cargo.toml  build.rs
lib/src/: constants.rs  coverage.rs  data.rs  evaluation.rs  format.rs  lib.rs  tree.rs
lib/tests/: lib.rs
src/: cli.rs  constants.rs  coverage.rs  data.rs  evaluation.rs  file_listing.rs  format.rs  identifier.rs  lib.rs  main.rs  stds.rs  tree.rs
tests/: lib.rs
