# SPDX-FileCopyrightText: 2022 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "osh-dir-std"
version = "0.7.0"
edition = "2021"
description = """
Code that helps humans and machines deal with the
*OSH directory standard*:
<https://github.com/hoijui/osh-dir-std>
"""
repository = "https://github.com/hoijui/osh-dir-std-rs"
keywords = ["norm", "osh", "directory", "structure"]
categories = ["standard", "specification", "osh"]
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]

[lints.rust]
rust_2021_compatibility = "warn"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
enum_variant_names = "allow"
# NOTE allowed because:
#      If the same regex is going to be applied to multiple inputs,
#      the precomputations done by Regex construction
#      can give significantly better performance
#      than any of the `str`-based methods.
trivial_regex = "allow"
default_trait_access = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
cast_precision_loss = "allow"

[dependencies]
clap = { version = "4.0", features = ["std", "cargo", "help"], default-features = false }
cli-utils = { version = "0.4", git = "https://github.com/hoijui/cli-utils-rs.git" }
codify = { version = "0.5", git = "https://github.com/hoijui/codify-rs.git" }
const_format = "0.2"
csv = "1.1"
git-version = "0.3"
log = "0.4"
once_cell = "1.16"
regex = "1.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_regex = "1.1"
thiserror = "1.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3" }

[build-dependencies]
codify = { version = "0.5", git = "https://github.com/hoijui/codify-rs.git" }
csv = "1.1"
log = "0.4"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1"
thiserror = "1.0"
