# SPDX-FileCopyrightText: 2022 - 2023 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[workspace]
resolver = "2"
members = [
   "bin",
   "lib",
]
# [package]
# name = "osh-dir-std-workspace"
# version = "0.7.2"
# license = "AGPL-3.0-or-later"
# authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
# description = """
# Helps humans and machines deal with the
# *OSH directory standard*:
# <https://github.com/hoijui/osh-dir-std>
# """
# repository = "https://github.com/hoijui/osh-dir-std-rs"
# homepage = "https://github.com/hoijui/osh-dir-std-rs"
# keywords = ["norm", "osh", "directory", "structure"]
# categories = ["command-line-utilities", "filesystem", "text-processing"]
# readme = "README.md"
# edition = "2021"
