# SPDX-FileCopyrightText: 2022 - 2024 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[workspace]
resolver = "2"
members = [
   "bin",
   "lib",
]
# [package]
# name = "osh-dir-std-workspace"
# version = "0.7.2"
# license = "AGPL-3.0-or-later"
# authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
# description = """
# Helps humans and machines deal with the
# *OSH directory standard*:
# <https://github.com/hoijui/osh-dir-std>
# """
# repository = "https://github.com/hoijui/osh-dir-std-rs"
# homepage = "https://github.com/hoijui/osh-dir-std-rs"
# keywords = ["norm", "osh", "directory", "structure"]
# categories = ["command-line-utilities", "filesystem", "text-processing"]
# readme = "README.md"
# edition = "2021"


[workspace.lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
